<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:fillViewport="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/appDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:text="@string/tempHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eppyDescriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTxt" />

    <TextView
        android:id="@+id/eppyDescriptionActual"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/eppyDescActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eppyDescriptionTxt"/>

    <TextView
        android:id="@+id/eppyHow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="12dp"
        android:textSize="20sp"
        android:text="@string/how_to_use"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eppyDescriptionActual"/>

    <TextView
        android:id="@+id/howTxt"
        android:layout_marginTop="10dp"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/howTxt"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eppyHow"/>

    <TextView
        android:id="@+id/eppyNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/note"
        android:layout_marginStart="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howTxt"/>

    <TextView
        android:id="@+id/noteTxt"
        android:layout_width="384dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="400dp"
        android:textSize="15sp"
        android:text="@string/noteTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eppyNote" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>